<resources>
    <string name="app_name">OldnX</string>

    <string name="facebook_app_id">162082391134793</string>
    <string name="fb_login_protocol_scheme">fb162082391134793</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_welcome_to_oldnx">WELCOME TO OLDnX</string>
    <string name="text_facebook_login">Continue with facebook</string>
    <string name="text_create_account">Create Account</string>
    <string name="text_account_exist">Already have an OLDnX account?</string>
    <string name="text_login_now">login now</string>
    <string name="text_terms_conditions"><![CDATA[By Continuing, you agree to our Terms & Conditions]]></string>
    <string name="text_start_buying_selling"><![CDATA[TO START BUYING & SELLING]]></string>
    <string name="text_login_with">login with</string>
    <string name="next">Next</string>
    <string name="text_login">Login</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="button_text_done">Done</string>
    <string name="button_text_next">Next</string>
</resources>
