<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_shared_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_60_dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_logo" />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/text_start_buying_selling"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_60_dp"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/dimen_30_dp"
                android:layout_height="0.7dp"
                android:layout_gravity="center_vertical"
                android:background="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_20_dp"
                android:layout_marginStart="@dimen/dimen_20_dp"
                android:text="@string/text_login"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_14_sp"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/dimen_30_dp"
                android:layout_height="0.7dp"
                android:layout_gravity="center_vertical"
                android:background="@color/colorWhite" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_40_dp"
            android:layout_marginStart="@dimen/dimen_40_dp"
            android:layout_marginTop="@dimen/dimen_40_dp"
            android:background="@drawable/bg_white_rounded_border"
            android:paddingBottom="@dimen/dimen_5_dp"
            android:paddingTop="@dimen/dimen_5_dp"
            android:textColorHint="@color/colorWhite">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="top|start"
                android:hint="@string/text_email"
                android:maxLines="1"
                android:paddingBottom="@dimen/dimen_5_dp"
                android:paddingEnd="@dimen/dimen_20_dp"
                android:paddingStart="@dimen/dimen_20_dp"
                android:paddingTop="@dimen/dimen_5_dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_40_dp"
            android:layout_marginStart="@dimen/dimen_40_dp"
            android:layout_marginTop="@dimen/dimen_15_dp"
            android:background="@drawable/bg_white_rounded_border"
            android:paddingBottom="@dimen/dimen_5_dp"
            android:paddingTop="@dimen/dimen_5_dp"
            android:textColorHint="@color/colorWhite">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="top|start"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="@dimen/dimen_5_dp"
                android:paddingEnd="@dimen/dimen_20_dp"
                android:paddingStart="@dimen/dimen_20_dp"
                android:paddingTop="@dimen/dimen_5_dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_40_dp"
            android:layout_marginStart="@dimen/dimen_40_dp"
            android:layout_marginTop="@dimen/dimen_30_dp"
            android:background="@drawable/bg_white"
            android:text="@string/text_login_now"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_24_sp" />
    </LinearLayout>
</layout>